Update resume (last job, delete some information about deploying, show linkedin link, replace h5 tag with p tag in titles) and css file

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
             </div>
             <div class="media-content"><a href="mailto:cuurjol@gmail.com">cuurjol@gmail.com</a></div>
           </div>
-<!--           <div class="media margin-bottom-1x">
+          <div class="media margin-bottom-1x">
             <div class="media-left fa-layers fa-fw fa-2x">
               <i class="fas fa-circle"></i>
               <i class="fab fa-linkedin-in fa-inverse" data-fa-transform="shrink-6"></i>
             </div>
             <div class="media-content"><a href="https://www.linkedin.com/in/cuurjol/">Kirill Ilyin</a></div>
-          </div> -->
+          </div>
           <div class="media margin-bottom-1x">
             <div class="media-left fa-layers fa-fw fa-2x">
               <i class="fas fa-circle"></i>
@@ -102,8 +102,8 @@
             </p>
             <p>
               I have been programming for a long time, starting with school and university studies and ending with today. At university, I was
-              pretty good at programming languages ​​like Pascal (Delphi) and C/C++ with using the QT framework. After graduating from university, 
-              I found a job as a programmer. My main programming language was C# and I had been developing applications for a year and a half. 
+              pretty good at programming languages ​​like Pascal (Delphi) and C/C++ with using the QT framework. After graduating from university,
+              I found a job as a programmer. My main programming language was C# and I had been developing applications for a year and a half.
               For various reasons, I gave up C# and switched to the Ruby programming language.
             </p>
             <p>
@@ -119,7 +119,6 @@
               <li>Testing applications using the Rspec and Capybara gems.</li>
               <li>Experience with SQLite, PostgreSQL, MongoDB databases in applications.</li>
               <li>Processing and creating data in XML, JSON.</li>
-              <li>Deploying applications on Heroku, VPS (nginx + passenger) or using the Capistrano gem.</li>
               <li>Simple websites layout using HTML, CSS, JavaScript (jQuery).</li>
             </ul>
             <p class="margin-bottom-1x"><strong>My examples of projects on Ruby on Rails:</strong></p>
@@ -127,17 +126,17 @@
               <li><a href="https://cuurjol-askme.herokuapp.com/">ASKME</a> &mdash; web application, a clone of the famous Web site <a href="https://ask.fm/">ask.fm</a>
               	(<a href="https://github.com/cuurjol/askme">project repository</a>).
               </li>
-              <li><a href="https://cuurjol-bbq.herokuapp.com/">BARBECUE</a> &mdash; web application designed to create meetings with friends and acquaintances in various places 
+              <li><a href="https://cuurjol-bbq.herokuapp.com/">BARBECUE</a> &mdash; web application designed to create meetings with friends and acquaintances in various places
               	(<a href="https://github.com/cuurjol/barbecue">project repository</a>).
               </li>
-              <li><a href="https://cuurjol-leramiz.herokuapp.com/">LERAMIZ</a> &mdash; web application, a simple chat made on ActionCable WebSockets 
+              <li><a href="https://cuurjol-leramiz.herokuapp.com/">LERAMIZ</a> &mdash; web application, a simple chat made on ActionCable WebSockets
               	(<a href="https://github.com/cuurjol/leramiz">project repository</a>).
               </li>
             </ul>
             <p>
-              Other projects on Ruby and Ruby on Rails can be viewed on my <a href="https://github.com/cuurjol">GitHub profile</a>. I also actively started solving various programming 
-              tasks and spent most of my time on the <a href="https://edabit.com/">Edabit</a> site. My list of tasks solved from there &mdash; 
-              <a href="https://gist.github.com/cuurjol/e4d214a91e4137cf5c8216b6e388079e">edabit tasks</a>. In the future, I will try other sites for solving programming tasks such 
+              Other projects on Ruby and Ruby on Rails can be viewed on my <a href="https://github.com/cuurjol">GitHub profile</a>. I also actively started solving various programming
+              tasks and spent most of my time on the <a href="https://edabit.com/">Edabit</a> site. My list of tasks solved from there &mdash;
+              <a href="https://gist.github.com/cuurjol/e4d214a91e4137cf5c8216b6e388079e">edabit tasks</a>. In the future, I will try other sites for solving programming tasks such
               as exercism, Codewars, LeetCode, HackerRank and so on.
             </p>
           </div>
@@ -156,21 +155,21 @@
       <div class="info-block-content-active">
         <div class="row">
           <div class="one-half column margin-top-1x">
-            <h5><strong>Technical Skills:</strong></h5>
+          	<p class="title-small margin-bottom-1x"><strong>Technical Skills:</strong></p>
               <ul>
               	<li><strong>Back-end</strong> &mdash; Ruby, ROR, OOP, MVC, REST, dry-rb</li>
                 <li><strong>Front-end</strong> &mdash; HTML, CSS, JavaScript, jQuery, Skeleton, Bootstrap</li>
                 <li><strong>Databases</strong> &mdash; SQLite, PostgreSQL, MongoDB</li>
                 <li><strong>Version control system</strong> &mdash; Git (Github, GitLab)</li>
-                <li><strong>DevOps</strong> &mdash; Heroku, AWS, Nginx/Passenger, Capistrano</li>
+                <li><strong>DevOps</strong> &mdash; Heroku, AWS, Capistrano</li>
                 <li><strong>Previously used skills</strong> &mdash; C#, WPF, EntityFramework, C/C++, QT, Delphi</li>
               </ul>
           </div>
           <div class="one-half column margin-top-1x">
-            <h5><strong>Languages:</strong></h5>
+          	<p class="title-small margin-bottom-1x"><strong>Languages:</strong></p>
               <ul>
                 <li><strong>Russian (C2)</strong> &mdash; Native language</li>
-                <li><strong>English (B1)</strong> &mdash; Intermediate level</li>
+                <li><strong>English (A2)</strong> &mdash; Pre-Intermediate level</li>
               </ul>
           </div>
         </div>
@@ -189,24 +188,31 @@
         <div class="row margin-top-1x margin-bottom-3x">
           <div class="one-third column left-column margin-bottom-1x">
             <p class="title">Ruby on Rails Developer</p>
-            <p>March 2020 &mdash; until now</p>
+            <p>March 2020 &mdash; February 2021</p>
             <p>Overteam, Moscow, Russia</p>
             <p><a href="https://overteam.ru/">Official site</a></p>
           </div>
           <div class="two-thirds column">
-            <h5><strong>Responsibilities:</strong></h5>
+            <p class="title-small margin-bottom-1x"><strong>Responsibilities:</strong></p>
             <ul>
               <li>Creating new and improving an existing functionality in the sanatory.ru online booking service.</li>
               <li>Providing a technical support for the synchronization of tariffs for sanatoriums.</li>
             </ul>
             <p class="margin-bottom-1x">
-              I got a fifth job as a Ruby on Rails developer at Overteam LLC on March 16, 2020. I was providing a technical support on a project 
-              for <a href="https://sanatory.ru/">sanatory.ru</a> online booking of sanatoriums. During all the time I worked in this company, 
+              I got a fifth job as a Ruby on Rails developer at Overteam LLC on March 16, 2020. I was providing a technical support on a project
+              for <a href="https://sanatory.ru/">sanatory.ru</a> online booking of sanatoriums. During all the time I worked in the company,
               I managed to do the following things:
-              <ul>
-                <li>Provided technical support for a synchronization of tariffs more than 100 sanatoriums.</li>
-                <li>Created a service that collects information about reviews of sanatoriums from <a href="https://www.tripadvisor.ru">tripadvisor.ru</a>.</li>
-              </ul>
+          	</p>
+            <ul>
+              <li>Provided technical support for a synchronization of tariffs more than 100 sanatoriums.</li>
+              <li>Wrote several scripts in Ruby, which generated reports on statistics and the state of sanatoriums for colleagues in the company. </li>
+              <li>Created a service that collects information about reviews of sanatoriums from <a href="https://www.tripadvisor.ru">tripadvisor.ru</a>.</li>
+            </ul>
+            <p>
+              After 12 months of work, I made a decision to quit the company because the company did not fulfill its agreements in full, which were
+              indicated from the first days of my work (I wanted to deal directly with the development of the system and be a developer and not be 
+              a technical support and maintain the system).
+            </p>
           </div>
         </div>
         <div class="row margin-top-1x margin-bottom-3x">
@@ -217,16 +223,20 @@
             <p><a href="https://dcrt.it/">Official site</a></p>
           </div>
           <div class="two-thirds column">
-            <h5><strong>Responsibilities:</strong></h5>
+            <p class="title-small margin-bottom-1x"><strong>Responsibilities:</strong></p>
             <ul>
               <li>Optimization and code refactoring.</li>
               <li>Fixing user bugs.</li>
             </ul>
             <p class="margin-bottom-1x">
-              I got a fourth job as a Ruby on Rails developer at Decart IT-production LLC on November 11, 2019. The company acted as a subcontractor 
-              for <a href="https://jet.su/en/">Jet Infosystems LLC</a>, which has a system of unified state register of real estate. I was engaged 
+              I got a fourth job as a Ruby on Rails developer at Decart IT-production LLC on November 11, 2019. The company acted as a subcontractor
+              for <a href="https://jet.su/en/">Jet Infosystems LLC</a>, which has a system of unified state register of real estate. I was engaged
               in technical support of the system, eliminating incidents accumulated over many years (user bugs, optimization and code refactoring).
+              There were not tasks for the development of new functionality, since the system was created long ago by other developers.
+            </p>
+            <p>
               After 4 months of work, I made a decision to quit the company due to poor workflows within Jet Infosystems LLC.
+            </p>
           </div>
         </div>
         <div class="row margin-top-1x margin-bottom-3x">
@@ -237,7 +247,7 @@
             <p><a href="https://natelsys.ru/">Official site</a></p>
           </div>
           <div class="two-thirds column">
-            <h5><strong>Responsibilities:</strong></h5>
+            <p class="title-small margin-bottom-1x"><strong>Responsibilities:</strong></p>
             <ul>
               <li>Developing a new functionality for a single digital platform for collecting tolls on the roads.</li>
               <li>Optimization and code refactoring.</li>
@@ -246,7 +256,13 @@
             </ul>
             <p class="margin-bottom-1x">
               I got a third job as a Ruby on Rails developer at SoftTelematics LLC on March 11, 2019. I was developing the unified digital system
-              of toll roads in Russia. After 6 months of work, I made a decision to leave the company for several reasons:
+              of toll roads in Russia. At first, I did tasks of writing integration and unit tests to check the performance of various sections
+              and individual components of the system, did tasks of technical debt to optimize and refactor code, and tasks to fix various
+              user errors. Further, there were voluminous tasks for writing various system functionality from scratch. There were no particularly
+              interesting or difficult tasks, they were all roughly the same.
+            </p>
+            <p class="margin-bottom-1x">
+              After 6 months of work, I made a decision to leave the company for several reasons:
             </p>
             <ul>
               <li>The company did not completely perform own agreements, but partially performed them (remote job).</li>
@@ -262,7 +278,7 @@
             <p><a href="https://www.eos.ru/eng/">Official site</a></p>
           </div>
           <div class="two-thirds column">
-            <h5><strong>Responsibilities:</strong></h5>
+            <p class="title-small margin-bottom-1x"><strong>Responsibilities:</strong></p>
             <ul>
               <li>Creating and improving an electronic document management system developed on the basis of the Microsoft SharePoint platform.</li>
               <li>Participation in updating the system architecture on ASP.NET MVC/Core MVC.</li>
@@ -279,13 +295,13 @@
         </div>
         <div class="row margin-top-1x margin-bottom-3x">
           <div class="one-third column left-column margin-bottom-1x">
-            <p class="title">Programmer (CRM Terrasoft BPM Online)</p>
+            <p class="title">Programmer (Terrasoft BPM Online)</p>
             <p>January 2017 &mdash; March 2018</p>
             <p>TOPCRM LLC, Sergiev Posad, Russia</p>
             <p><a href="http://topcrm.org/">Official site</a></p>
           </div>
           <div class="two-thirds column">
-            <h5><strong>Responsibilities:</strong></h5>
+          	<p class="title-small margin-bottom-1x"><strong>Responsibilities:</strong></p>
             <ul>
               <li>Improving existing modules on the Terrasoft platform for the configuration of the CRM system.</li>
               <li>Customizing and improving UI for the CRM system.</li>
@@ -320,7 +336,7 @@
             <p><a href="http://www.bmstu.ru/en">Official site</a></p>
           </div>
           <div class="two-thirds column">
-            <h5><strong>Bauman Moscow State Technical University</strong></h5>
+          	<p class="title-small margin-bottom-1x"><strong>Bauman Moscow State Technical University</strong></p>
             <strong>Faculty:</strong> Informatics and Control Systems<br>
             <strong>Sub-Faculty:</strong> Computer Systems, Complexes and Networks<br>
             <strong>Speciality:</strong> Computer Science and Engineering<br>
@@ -345,7 +361,7 @@
             <p><a href="https://goodprogrammer.ru/">Official site</a></p>
           </div>
           <div class="two-thirds column">
-            <h5><strong>Online-school Good Programmer</strong></h5>
+          	<p class="title-small margin-bottom-1x"><strong>Online-school Good Programmer</strong></p>
             Ruby on Rails intensive course.&nbsp;
             <a href="https://goodprogrammer.ru/certificates/5524fd4871f75c3054ae">Certificate</a><br>
           </div>
@@ -357,7 +373,7 @@
             <p><a href="https://englishtochka.ru/">Official site</a></p>
           </div>
           <div class="two-thirds column">
-            <h5><strong>Online-school EnglishTochka by Alex Rubanov</strong></h5>
+          	<p class="title-small margin-bottom-1x"><strong>Online-school EnglishTochka by Alex Rubanov</strong></p>
             English Course. Certificates:&nbsp;
             <a href="http://www.engtochka.ru/certtest/feb2018/710632ddb843880b8562e83e9cbae2c9.html">#1</a>&nbsp;
             <a href="http://www.engtochka.ru/certtest/sept2018/f2c524670d73dc64059949ea065ddc87.html">#2</a>&nbsp;
