--- a/russian_index.html
+++ b/russian_index.html
@@ -61,13 +61,13 @@
             </div>
             <div class="media-content"><a href="mailto:cuurjol@gmail.com">cuurjol@gmail.com</a></div>
           </div>
-<!--           <div class="media margin-bottom-1x">
+          <div class="media margin-bottom-1x">
             <div class="media-left fa-layers fa-fw fa-2x">
               <i class="fas fa-circle"></i>
               <i class="fab fa-linkedin-in fa-inverse" data-fa-transform="shrink-6"></i>
             </div>
             <div class="media-content"><a href="https://www.linkedin.com/in/cuurjol/">Кирилл Ильин</a></div>
-          </div> -->
+          </div>
           <div class="media margin-bottom-1x">
             <div class="media-left fa-layers fa-fw fa-2x">
               <i class="fas fa-circle"></i>
@@ -101,14 +101,14 @@
               Я ищу работу на позицию Ruby on Rails разработчика. Я рассматриваю удалённую работу или релокацию в другую страну (предпочтительно европейские страны).
             </p>
             <p>
-              Я занимаюсь программированием достаточно давно, начиная с учёбы в школе и университете и заканчивая сегодняшним днём. В университете я достаточно 
-              неплохо владел такими языками программирования, как Pascal (Delphi) и C/C++ с использованием фреймворка QT. После окончания учёбы в университете 
-              я нашёл себе работу в роли программиста. Основным языком программирования у меня был C#, и полтора года я разрабатывал приложения. По разным причинам 
+              Я занимаюсь программированием достаточно давно, начиная с учёбы в школе и университете и заканчивая сегодняшним днём. В университете я достаточно
+              неплохо владел такими языками программирования, как Pascal (Delphi) и C/C++ с использованием фреймворка QT. После окончания учёбы в университете
+              я нашёл себе работу в роли программиста. Основным языком программирования у меня был C#, и полтора года я разрабатывал приложения. По разным причинам
               я отказался от C# и перешел на язык программирования Ruby.
             </p>
             <p>
               Я начал заниматься разработкой на Ruby on Rails с сентября 2018 года и продолжаю по сей день. За этот период времени я успешно
-              закончил интенсивный курс по Ruby on Rails от онлайн-школы <a href="https://goodprogrammer.ru/">Хороший Программист</a> и работал 
+              закончил интенсивный курс по Ruby on Rails от онлайн-школы <a href="https://goodprogrammer.ru/">Хороший Программист</a> и работал
               в нескольких проектах в роли Ruby on Rails разработчика.
             </p>
             <p class="margin-bottom-1x"><strong>Основные навыки разработки:</strong></p>
@@ -119,25 +119,24 @@
               <li>Тестирование приложений с использованием гемов Rspec и Capybara.</li>
               <li>Опыт работы с базами данных SQLite, PostgreSQL, MongoDB в приложениях.</li>
               <li>Обработка и создание данных в формате XML, JSON.</li>
-              <li>Развёртывание приложений на Heroku, VPS (nginx + passenger) или с использованием гема Capistrano.</li>
               <li>Простая вёрстка сайтов с использованием HTML, CSS, JavaScript (JQuery).</li>
             </ul>
             <p class="margin-bottom-1x"><strong>Мои примеры проектов на Ruby on Rails:</strong></p>
             <ul>
-              <li><a href="https://cuurjol-askme.herokuapp.com/">ASKME</a> &mdash; веб-приложение, клон известного сайта <a href="https://ask.fm/">ask.fm</a> 
+              <li><a href="https://cuurjol-askme.herokuapp.com/">ASKME</a> &mdash; веб-приложение, клон известного сайта <a href="https://ask.fm/">ask.fm</a>
                 (<a href="https://github.com/cuurjol/askme">репозиторий проекта</a>).
               </li>
-              <li><a href="https://cuurjol-bbq.herokuapp.com/">BARBECUE</a> &mdash; веб-приложение, предназначеное для создания встречи с друзьями и знакомыми в различных местах 
+              <li><a href="https://cuurjol-bbq.herokuapp.com/">BARBECUE</a> &mdash; веб-приложение, предназначеное для создания встречи с друзьями и знакомыми в различных местах
                 (<a href="https://github.com/cuurjol/barbecue">репозиторий проекта</a>).
               </li>
-              <li><a href="https://cuurjol-leramiz.herokuapp.com/">LERAMIZ</a> &mdash; веб-приложение, простой чат, сделанный на ActionCable вебсокетах 
+              <li><a href="https://cuurjol-leramiz.herokuapp.com/">LERAMIZ</a> &mdash; веб-приложение, простой чат, сделанный на ActionCable вебсокетах
                 (<a href="https://github.com/cuurjol/leramiz">репозиторий проекта</a>).
               </li>
             </ul>
             <p>
-              Другие проекты на Ruby и Ruby on Rails можно посмотреть на моём <a href="https://github.com/cuurjol">GitHub профиле</a>. Также я активно начал решать различные задачи 
-              по программированию и большую часть времени я потратил на сайте <a href="https://edabit.com/">Edabit</a>. Мой список решённых оттуда задач &mdash; 
-              <a href="https://gist.github.com/cuurjol/e4d214a91e4137cf5c8216b6e388079e">edabit tasks</a>. В будущем я буду пробовать другие сайты для решения задач по программированию, 
+              Другие проекты на Ruby и Ruby on Rails можно посмотреть на моём <a href="https://github.com/cuurjol">GitHub профиле</a>. Также я активно начал решать различные задачи
+              по программированию и большую часть времени я потратил на сайте <a href="https://edabit.com/">Edabit</a>. Мой список решённых оттуда задач &mdash;
+              <a href="https://gist.github.com/cuurjol/e4d214a91e4137cf5c8216b6e388079e">edabit tasks</a>. В будущем я буду пробовать другие сайты для решения задач по программированию,
               такие как exercism, Codewars, LeetCode, HackerRank и так далее.
             </p>
           </div>
@@ -156,21 +155,21 @@
       <div class="info-block-content-active">
         <div class="row">
           <div class="one-half column margin-top-1x">
-            <h5><strong>Технические навыки:</strong></h5>
+            <p class="title-small margin-bottom-1x"><strong>Технические навыки:</strong></p>
               <ul>
                 <li><strong>Back-end</strong> &mdash; Ruby, ROR, OOP, MVC, REST, dry-rb</li>
                 <li><strong>Front-end</strong> &mdash; HTML, CSS, JavaScript, jQuery, Skeleton, Bootstrap</li>
                 <li><strong>Databases</strong> &mdash; SQLite, PostgreSQL, MongoDB</li>
                 <li><strong>Version control system</strong> &mdash; Git (Github, GitLab)</li>
-                <li><strong>DevOps</strong> &mdash; Heroku, AWS, Nginx/Passenger, Capistrano</li>
+                <li><strong>DevOps</strong> &mdash; Heroku, AWS, Capistrano</li>
                 <li><strong>Ранее использованные навыки</strong> &mdash; C#, WPF, EntityFramework, C/C++, QT, Delphi</li>
               </ul>
           </div>
           <div class="one-half column margin-top-1x">
-            <h5><strong>Знание языков:</strong></h5>
+            <p class="title-small margin-bottom-1x"><strong>Знание языков:</strong></p>
               <ul>
                 <li><strong>Русский (C2)</strong> &mdash; Родной язык</li>
-                <li><strong>Английский (B1)</strong> &mdash; Средний уровень</li>
+                <li><strong>Английский (A2)</strong> &mdash; Элементарный уровень</li>
               </ul>
           </div>
         </div>
@@ -189,24 +188,31 @@
         <div class="row margin-top-1x margin-bottom-3x">
           <div class="one-third column left-column margin-bottom-1x">
             <p class="title">Разработчик Ruby on Rails</p>
-            <p>Март 2020 &mdash; по настоящее время</p>
+            <p>Март 2020 &mdash; Февраль 2021</p>
             <p>Овертим, Москва, Россия</p>
             <p><a href="https://overteam.ru/">Официальный сайт</a></p>
           </div>
           <div class="two-thirds column">
-            <h5><strong>Обязанности:</strong></h5>
+            <p class="title-small margin-bottom-1x"><strong>Обязанности:</strong></p>
             <ul>
               <li>Создание нового и улучшение существующего функционала в сервисе онлайн бронирования санаториев sanatory.ru.</li>
               <li>Оказание технической поддержки по синхронизации тарифов для санаториев.</li>
             </ul>
             <p class="margin-bottom-1x">
-              16 марта 2020 года я устроился на пятую работу на должность разработчика Ruby on Rails в компанию Овертим. Я оказывал техническую поддержку 
-              на проекте по онлайн бронированию санаториев <a href="https://sanatory.ru/">sanatory.ru</a>. За всё время работы в этой компании я успел 
-              сделать следующие вещи:
-              <ul>
-                <li>Оказал техническую поддержку по синхронизации тарифов более 100 санаториям.</li>
-                <li>Создал сервис, который собирает информацию об отзывах санаториев с сайта <a href="https://www.tripadvisor.ru">tripadvisor.ru</a>.</li>
-              </ul>
+              16 марта 2020 года я устроился на пятую работу на должность разработчика Ruby on Rails в компанию Овертим. Я оказывал техническую поддержку
+              на проекте по онлайн бронированию санаториев <a href="https://sanatory.ru/">sanatory.ru</a>. За всё время работы в компании я успел сделать
+              следующие вещи:
+            </p>
+            <ul>
+              <li>Оказал техническую поддержку по синхронизации тарифов более 300 санаториев.</li>
+              <li>Написал несколько скриптов на Ruby, которые формировали отчёты по статистике и состоянию санаториев для своих коллег в компании.</li>
+              <li>Создал сервис, который собирает информацию об отзывах санаториев с сайта <a href="https://www.tripadvisor.ru">tripadvisor.ru</a>.</li>
+            </ul>
+            <p class="margin-bottom-1x">
+              После 12 месяцев работы я принял решение уволиться из компании, поскольку компания не выполнила свои договорённости полностью, которые были
+              обозначены с первых дней моей работы (хотел заниматься непосредственно разработкой системы и быть разработчиком, а не быть технической
+              поддержкой и обслуживать систему).
+            </p>
           </div>
         </div>
         <div class="row margin-top-1x margin-bottom-3x">
@@ -217,17 +223,22 @@
             <p><a href="https://dcrt.it/">Официальный сайт</a></p>
           </div>
           <div class="two-thirds column">
-            <h5><strong>Обязанности:</strong></h5>
+            <p class="title-small margin-bottom-1x"><strong>Обязанности:</strong></p>
             <ul>
               <li>Оптимизация и рефакторинг кода.</li>
               <li>Исправление возникающих ошибок у пользователей.</li>
             </ul>
             <p class="margin-bottom-1x">
-              11 ноября 2019 года я устроился на четвёртую работу на должность разработчика Ruby on Rails в компанию ООО «Декарт Айти». 
-              Компания выступала в роли субподрядчика для компании <a href="https://jet.su">ООО «Инфосистемы Джет»</a>, у которой был 
-              проект ЕГРН &mdash; система единого государственного реестра недвижимости. Я занимался технической поддержкой этого проекта, 
-              устраняя накопившиеся за многие года инциденты (ошибки у пользователей, оптимизация и рефакторинг кода). После 4 месяцев работы 
-              я принял решение уволиться из компании из-за плохо налаженных рабочих процессов внутри компании ООО «Инфосистемы Джет».
+              11 ноября 2019 года я устроился на четвёртую работу на должность разработчика Ruby on Rails в компанию ООО «Декарт Айти».
+              Компания выступала в роли субподрядчика для компании <a href="https://jet.su">ООО «Инфосистемы Джет»</a>, у которой был
+              проект ЕГРН &mdash; система единого государственного реестра недвижимости. Я занимался технической поддержкой этого проекта,
+              устраняя накопившиеся за многие года инциденты (ошибки у пользователей, оптимизация и рефакторинг кода). Не было никаких задач
+              по разработке нового функционала, поскольку система была давно создана другими разработчиками.
+            </p>
+            <p class="margin-bottom-1x">
+              После 4 месяцев работы я принял решение уволиться из компании из-за плохо налаженных рабочих процессов внутри компании
+              ООО «Инфосистемы Джет».
+            </p>
           </div>
         </div>
         <div class="row margin-top-1x margin-bottom-3x">
@@ -238,7 +249,7 @@
             <p><a href="https://natelsys.ru/">Официальный сайт</a></p>
           </div>
           <div class="two-thirds column">
-            <h5><strong>Обязанности:</strong></h5>
+            <p class="title-small margin-bottom-1x"><strong>Обязанности:</strong></p>
             <ul>
               <li>Разработка нового функционала для единой цифровой платформы взимания платы за проезд по дорогам.</li>
               <li>Оптимизация и рефакторинг кода.</li>
@@ -247,8 +258,14 @@
             </ul>
             <p class="margin-bottom-1x">
               11 марта 2019 года я устроился на третью работу на должность разработчика Ruby on Rails в компанию СофтТелематика. Я
-              занимался разработкой системы ЕЦПВП &mdash; единая цифровая платформа взимания платы на платных дорогах России. После 6
-              месяцев работы я принял решение уволиться из компании по нескольким причинам:
+              занимался разработкой системы ЕЦПВП &mdash; единая цифровая платформа взимания платы на платных дорогах России.
+              В первое время я выполнял задачи по написанию интеграционных и юнит тестов на проверку работоспособности различных
+              разделов и отдельных компонентов системы, задачи техдолга по оптимизации и рефакторингу кода и задачи по исправлению
+              различных ошибок у пользователей. Далее были объемные задачи по написанию различного функционала системы с нуля.
+              Особо интересных или сложных задач не было, все были примерно одинаковые.
+            </p>
+            <p class="margin-bottom-1x">
+              После 6 месяцев работы я принял решение уволиться из компании по нескольким причинам:
             </p>
             <ul>
               <li>Компания не выполнила свои договорённости полностью, но выполнила их частично (удалённая работа).</li>
@@ -264,7 +281,7 @@
             <p><a href="https://www.eos.ru/">Официальный сайт</a></p>
           </div>
           <div class="two-thirds column">
-            <h5><strong>Обязанности:</strong></h5>
+            <p class="title-small margin-bottom-1x"><strong>Обязанности:</strong></p>
             <ul>
               <li>Создание и улучшение системы электронного документооборота, разработанную на базе платформы Microsoft SharePoint.</li>
               <li>Участие в обновлении архитектуры системы на ASP.NET MVC/Core MVC.</li>
@@ -281,13 +298,13 @@
         </div>
         <div class="row margin-top-1x margin-bottom-3x">
           <div class="one-third column left-column margin-bottom-1x">
-            <p class="title">Программист (CRM Terrasoft BPM Online)</p>
+            <p class="title">Программист (Terrasoft BPM Online)</p>
             <p>Январь 2017 &mdash; Март 2018</p>
             <p>TOPCRM (ООО "ТОПСИЭРЭМ"), Сергиев Посад, Россия</p>
             <p><a href="http://topcrm.org/">Официальный сайт</a></p>
           </div>
           <div class="two-thirds column">
-            <h5><strong>Обязанности:</strong></h5>
+            <p class="title-small margin-bottom-1x"><strong>Обязанности:</strong></p>
             <ul>
               <li>Улучшение существующих модулей на платформе Terrasoft для конфигурации CRM-системы BPM Online.</li>
               <li>Настройка и улучшение пользовательских интерфейсов для CRM-системы.</li>
@@ -322,7 +339,7 @@
             <p><a href="http://www.bmstu.ru/">Официальный сайт</a></p>
           </div>
           <div class="two-thirds column">
-            <h5><strong>Московский государственный технический университет им. Н.Э. Баумана</strong></h5>
+            <p class="title-small margin-bottom-1x"><strong>Московский государственный технический университет им. Н.Э. Баумана</strong></p>
             <strong>Факультет:</strong> Информатика и системы управления<br>
             <strong>Кафедра:</strong> Компьютерные системы и сети<br>
             <strong>Специализация:</strong> Информатика и вычислительная техника<br>
@@ -347,7 +364,7 @@
             <p><a href="https://goodprogrammer.ru/">Официальный сайт</a></p>
           </div>
           <div class="two-thirds column">
-            <h5><strong>Онлайн-школа Хороший Программист</strong></h5>
+            <p class="title-small margin-bottom-1x"><strong>Онлайн-школа Хороший Программист</strong></p>
             Интенсивный курс по Ruby on Rails.&nbsp;
             <a href="https://goodprogrammer.ru/certificates/5524fd4871f75c3054ae">Сертификат</a><br>
           </div>
@@ -359,7 +376,7 @@
             <p><a href="https://englishtochka.ru/">Официальный сайт</a></p>
           </div>
           <div class="two-thirds column">
-            <h5><strong>Онлайн-школа EnglishTochka Алекса Рубанова</strong></h5>
+            <p class="title-small margin-bottom-1x"><strong>Онлайн-школа EnglishTochka Алекса Рубанова</strong></p>
             Курс английского языка. Сертификаты:&nbsp;
             <a href="http://www.engtochka.ru/certtest/feb2018/710632ddb843880b8562e83e9cbae2c9.html">#1</a>&nbsp;
             <a href="http://www.engtochka.ru/certtest/sept2018/f2c524670d73dc64059949ea065ddc87.html">#2</a>&nbsp;
