Update resume (SoftTelematics company)

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             </ul>
             <p>
               After 12 months of work, I made a decision to quit the company because the company did not fulfill its agreements in full, which were
-              indicated from the first days of my work (I wanted to deal directly with the development of the system and be a developer and not be 
+              indicated from the first days of my work (I wanted to deal directly with the development of the system and be a developer and not be
               a technical support and maintain the system).
             </p>
           </div>
@@ -262,12 +262,8 @@
               interesting or difficult tasks, they were all roughly the same.
             </p>
             <p class="margin-bottom-1x">
-              After 6 months of work, I made a decision to leave the company for several reasons:
+              After 6 months of work, I quit the company due to staff reductions (project ended).
             </p>
-            <ul>
-              <li>The company did not completely perform own agreements, but partially performed them (remote job).</li>
-              <li>Staff reductions.</li>
-            </ul>
           </div>
         </div>
         <div class="row margin-top-1x margin-bottom-3x">
