--- a/russian_index.html
+++ b/russian_index.html
@@ -265,12 +265,8 @@
               Особо интересных или сложных задач не было, все были примерно одинаковые.
             </p>
             <p class="margin-bottom-1x">
-              После 6 месяцев работы я принял решение уволиться из компании по нескольким причинам:
+              После 6 месяцев работы я уволился из компании из-за сокращения штата (закончился проект).
             </p>
-            <ul>
-              <li>Компания не выполнила свои договорённости полностью, но выполнила их частично (удалённая работа).</li>
-              <li>Сокращение штата.</li>
-            </ul>
           </div>
         </div>
         <div class="row margin-top-1x margin-bottom-3x">
